scm/build3.log
warning: unused import: `Processor`
 --> transport\main\src\api\traits\mod.rs:5:18
  |
5 | pub use traits::{Processor, Validator};
  |                  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variant `Config` is never constructed
  --> transport\main\src\api\error\grpc_channel_config_error.rs:12:5
   |
 6 | pub enum GrpcChannelConfigError {
   |          ---------------------- variant in this enum
...
12 |     Config(String),
   |     ^^^^^^
   |
   = note: `GrpcChannelConfigError` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: trait `Validator` is never used
  --> transport\main\src\api\traits\traits.rs:14:11
   |
14 | pub trait Validator {
   |           ^^^^^^^^^

warning: trait `Processor` is never used
  --> transport\main\src\api\traits\processor\processor.rs:10:11
   |
10 | pub trait Processor: Send + Sync {
   |           ^^^^^^^^^

warning: struct `TransportSvc` is never constructed
 --> transport\main\src\api\types\transport_svc.rs:6:12
  |
6 | pub struct TransportSvc;
  |            ^^^^^^^^^^^^

warning: associated functions `create_config_builder`, `create_transport_from_config`, `create_tonic_client_from_config`, `validate_resilience_config`, and `create_lb_transport_from_config` are never used
  --> transport\main\src\saf\transport_svc.rs:40:12
   |
38 | impl TransportSvc {
   | ----------------- associated functions in this implementation
39 |     /// Create a config builder pre-populated with this crate's name and version.
40 |     pub fn create_config_builder() -> swe_edge_configbuilder::ConfigBuilderImpl {
   |            ^^^^^^^^^^^^^^^^^^^^^
...
48 |     pub fn create_transport_from_config(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
57 |     pub fn create_tonic_client_from_config(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
77 |     pub fn validate_resilience_config(config: &ResilienceConfig) -> Result<(), String> {
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
90 |     pub fn create_lb_transport_from_config(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: constant `DEFAULT_TIMEOUT` is never used
  --> transport\main\src\spi\loadbalancer\tonic\lb_grpc_client.rs:23:7
   |
23 | const DEFAULT_TIMEOUT: Duration = Duration::from_secs(30);
   |       ^^^^^^^^^^^^^^^

warning: struct `TonicLbGrpcClient` is never constructed
  --> transport\main\src\spi\loadbalancer\tonic\lb_grpc_client.rs:33:12
   |
33 | pub struct TonicLbGrpcClient {
   |            ^^^^^^^^^^^^^^^^^

warning: associated items `from_config`, `with_timeout`, and `timeout` are never used
  --> transport\main\src\spi\loadbalancer\tonic\lb_grpc_client.rs:47:12
   |
39 | impl TonicLbGrpcClient {
   | ---------------------- associated items in this implementation
...
47 |     pub fn from_config(config: LoadbalancerConfig) -> Result<Self, GrpcEgressError> {
   |            ^^^^^^^^^^^
...
80 |     pub fn with_timeout(mut self, timeout: Duration) -> Self {
   |            ^^^^^^^^^^^^
...
86 |     pub fn timeout(&self) -> Duration {
   |            ^^^^^^^

warning: `swe-edge-egress-grpc-transport` (lib) generated 9 warnings (run `cargo fix --lib -p swe-edge-egress-grpc-transport` to apply 1 suggestion)
warning: unused import: `validator::Validator`
 --> breaker\main\src\api\traits\mod.rs:9:9
  |
9 | pub use validator::Validator;
  |         ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `grpc_breaker_config::GrpcBreakerConfig`
  --> breaker\main\src\api\types\mod.rs:14:9
   |
14 | pub use grpc_breaker_config::GrpcBreakerConfig;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `grpc_breaker_svc::GrpcBreakerSvc`
  --> breaker\main\src\api\types\mod.rs:15:9
   |
15 | pub use grpc_breaker_svc::GrpcBreakerSvc;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: trait `Validator` is never used
 --> breaker\main\src\api\traits\validator.rs:7:11
  |
7 | pub trait Validator: Send + Sync {
  |           ^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `grpc_retry_client::GrpcRetryClient`
  --> retry\main\src\api\types\mod.rs:13:9
   |
13 | pub use grpc_retry_client::GrpcRetryClient;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `grpc_retry_config::GrpcRetryConfig`
  --> retry\main\src\api\types\mod.rs:14:9
   |
14 | pub use grpc_retry_config::GrpcRetryConfig;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `grpc_retry_svc::GrpcRetrySvc`
  --> retry\main\src\api\types\mod.rs:16:9
   |
16 | pub use grpc_retry_svc::GrpcRetrySvc;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: trait `Validator` is never used
  --> retry\main\src\api\traits\validator.rs:10:11
   |
10 | pub trait Validator {
   |           ^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `swe-edge-egress-grpc-breaker` (lib) generated 4 warnings (run `cargo fix --lib -p swe-edge-egress-grpc-breaker` to apply 3 suggestions)
warning: `swe-edge-egress-grpc-retry` (lib) generated 4 warnings (run `cargo fix --lib -p swe-edge-egress-grpc-retry` to apply 3 suggestions)
   Compiling swe-edge-egress-grpc-resilient v0.5.0 (C:\phd-systems\swelabs\edge\egress\grpc\scm\resilient)
warning: unused import: `grpc_auth_bearer_svc::GrpcAuthBearerSvc`
  --> auth-bearer\main\src\api\types\mod.rs:18:9
   |
18 | pub use grpc_auth_bearer_svc::GrpcAuthBearerSvc;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `swe-edge-egress-grpc-auth-bearer` (lib) generated 1 warning (run `cargo fix --lib -p swe-edge-egress-grpc-auth-bearer` to apply 1 suggestion)
error[E0252]: the name `ResilientTransportError` is defined multiple times
  --> resilient\main\src\saf\resilient_svc.rs:12:9
   |
 9 | pub use crate::api::error::resilient_transport_error::ResilientTransportError;
   |         --------------------------------------------------------------------- previous import of the type `ResilientTransportError` here
...
12 | pub use crate::api::ResilientTransportError;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ResilientTransportError` reimported here
   |
   = note: `ResilientTransportError` must be defined only once in the type namespace of this module

error[E0432]: unresolved import `swe_edge_egress_grpc::GrpcChannelConfigError`
 --> resilient\main\src\api\error\resilient_transport_error.rs:3:5
  |
3 | use swe_edge_egress_grpc::GrpcChannelConfigError;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `GrpcChannelConfigError` in the root
  |
help: a similar name exists in the module
  |
3 - use swe_edge_egress_grpc::GrpcChannelConfigError;
3 + use swe_edge_egress_grpc::GrpcChannelConfigBuilder;
  |

error[E0432]: unresolved import `swe_edge_egress_grpc::GrpcChannelConfig`
 --> resilient\main\src\api\traits\assembler.rs:5:28
  |
5 | use swe_edge_egress_grpc::{GrpcChannelConfig, GrpcEgress};
  |                            ^^^^^^^^^^^^^^^^^ no `GrpcChannelConfig` in the root

error[E0432]: unresolved import `swe_edge_egress_grpc::GrpcChannelConfig`
 --> resilient\main\src\core\default_processor.rs:6:28
  |
6 | use swe_edge_egress_grpc::{GrpcChannelConfig, GrpcEgress};
  |                            ^^^^^^^^^^^^^^^^^ no `GrpcChannelConfig` in the root

error[E0432]: unresolved imports `swe_edge_egress_grpc::GrpcChannelConfig`, `swe_edge_egress_grpc::TransportSvc`
 --> resilient\main\src\saf\resilient_svc.rs:5:28
  |
5 | use swe_edge_egress_grpc::{GrpcChannelConfig, GrpcEgress, TransportSvc};
  |                            ^^^^^^^^^^^^^^^^^              ^^^^^^^^^^^^ no `TransportSvc` in the root
  |                            |
  |                            no `GrpcChannelConfig` in the root

error[E0425]: cannot find type `GrpcChannelConfig` in crate `swe_edge_egress_grpc`
  --> resilient\main\src\api\traits\processor.rs:16:40
   |
16 |         config: &swe_edge_egress_grpc::GrpcChannelConfig,
   |                                        ^^^^^^^^^^^^^^^^^ not found in `swe_edge_egress_grpc`

error[E0425]: cannot find type `GrpcChannelConfig` in crate `swe_edge_egress_grpc`
 --> resilient\main\src\api\traits\validator.rs:8:55
  |
8 |     fn validate(&self, config: &swe_edge_egress_grpc::GrpcChannelConfig) -> Result<(), String>;
  |                                                       ^^^^^^^^^^^^^^^^^ not found in `swe_edge_egress_grpc`

warning: unused import: `processor::Processor`
  --> resilient\main\src\api\traits\mod.rs:12:9
   |
12 | pub use processor::Processor;
   |         ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `validator::Validator`
  --> resilient\main\src\api\traits\mod.rs:13:9
   |
13 | pub use validator::Validator;
   |         ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `grpc_resilient_svc::GrpcResilientSvc`
 --> resilient\main\src\api\types\mod.rs:4:9
  |
4 | pub use grpc_resilient_svc::GrpcResilientSvc;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::api::ResilientTransportError`
  --> resilient\main\src\saf\resilient_svc.rs:12:9
   |
12 | pub use crate::api::ResilientTransportError;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0252, E0425, E0432.
For more information about an error, try `rustc --explain E0252`.
warning: `swe-edge-egress-grpc-resilient` (lib) generated 4 warnings
error: could not compile `swe-edge-egress-grpc-resilient` (lib) due to 7 previous errors; 4 warnings emitted
